задача 2 - второй вариант на аснхронном AsyncReaderWriterLock от Nito
Signed-off-by: D.Ryabov <ryabchikk@mail.ru>

--- a/SecondTask/SecondTask.csproj
+++ b/SecondTask/SecondTask.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="17.14.15" />
+    <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
   </ItemGroup>
-
 </Project>
