--- a/ThirdTask/ThirdTask.csproj
+++ b/ThirdTask/ThirdTask.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="input.log">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
